新增应用商店repo
